fix: load correct font and center align content

--- a/wiki/public/scss/wiki.scss
+++ b/wiki/public/scss/wiki.scss
@@ -40,7 +40,7 @@ body {
 
 	// ------------------------------------------
 
-	font-family: InterVar, ui-sans-serif, system-ui, -apple-system,
+	font-family: InterVariable, ui-sans-serif, system-ui, -apple-system,
 		BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans,
 		sans-serif, "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol,
 		"Noto Color Emoji";
@@ -670,6 +670,7 @@ body.dark {
 	background-color: var(--background-color);
 	width: 745px;
 	padding: 10px 40px;
+	margin: auto auto;
 
 	@include media-breakpoint-down(md) {
 		padding: 20px;
